yaml/ubuntu-cluster.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: ubuntu-deployment
  namespace: kafka-cluster
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ubuntu
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        network/kafka: "true"
        app: ubuntu
    spec:
      containers:
        - name: ubuntu
          image: 'ubuntu'
