yaml/kafka-cluster.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: kafka
  namespace: kafka-cluster
  labels:
    app: kafka
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        network/kafka: "true"
        app: kafka
    spec:
      containers:
        - name: kafka
          image: 'fogsyio/kafka:arm64v8-2.2.0'
          ports:
            - containerPort: 9092
---
apiVersion: v1
kind: Service
metadata:
  name: kafka-service
  namespace: kafka-cluster
  labels:
    app: kafka
spec:
  ports:
    - name: broker
      port: 9092
      targetPort: 9092
  selector:
    app: kafka
