yaml/zookeeper-cluster.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: zookeeper
  namespace: kafka-cluster
  labels:
    app: zookeeper
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zookeeper
  template:
    metadata:
      labels:
        network/kafka: "true"
        app: zookeeper
    spec:
      containers:
        - name: zookeeper
          image: 'zookeeper:3.7'
          ports:
            - containerPort: 2181
---
apiVersion: v1
kind: Service
metadata:
  name: zookeeper-service
  namespace: kafka-cluster
  labels:
    app: zookeeper
spec:
  ports:
    - name: client
      port: 2181
      targetPort: 2181
      protocol: TCP
    - name: follower
      port: 2888
      targetPort: 2888
      protocol: TCP
    - name: leader
      port: 3888
      targetPort: 3888
      protocol: TCP
  selector:
    app: zookeeper
