yaml/kafka-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: kafka
  namespace: kafka-cluster
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              network/kafka: "true"
  podSelector:
    matchLabels:
      network/kafka: "true"
